--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -174,10 +174,25 @@ main {
 // ACTUALITES
 
 .head {
-  padding: 2rem 2rem 3rem 2rem;
+  padding: 2rem 2rem 1rem 2rem;
   h3 {
     color: #09236b;
     font-weight: 900;
+  }
+}
+
+.about {
+  padding: 0 2rem;
+
+  .btnAbout {
+    display: flex;
+    gap: 1rem;
+    padding-top: 1rem;
+
+    button {
+      border: 1px transparent solid;
+      padding: 0.3rem 0.5rem;
+    }
   }
 }
 
@@ -371,10 +386,6 @@ main {
 
     .contenu {
       margin-bottom: 2rem;
-    }
-
-    .about {
-      height: 140px;
     }
 
     button {
